# ROS2ForBeginner

my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: custom.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: custom.py  my_first_node.py  robot_news_station.py  smartPhone.py
